# learning-opengl

./: .gitignore  CMakeLists.txt  build.bat  configure.bat  do.py  example.bat  run.bat
examples/: bar_graph.cpp  gears.cpp  sphere.cpp
include/: gfx.hpp  util.hpp
src/: gfx.cpp  main.cpp  util.cpp
